--- a/Languages/Programming_Languages/c++/Characteristics_of_OOPS/Polymorphism/Static_CompileTime/Templates/README.adoc
+++ b/Languages/Programming_Languages/c++/Characteristics_of_OOPS/Polymorphism/Static_CompileTime/Templates/README.adoc
@@ -1,9 +1,11 @@
 :toc:
 :toclevels: 6
 
-== link:https://code-with-amitk.github.io//Languages/Programming/C++/Characteristics%20of%20OOPS/Polymorphism/Static_CompileTime/Templates/[Function Templates]
-* How function templates work internally?
-* Assembly (Function Templates)
+== Templates
+=== link:https://code-with-amitk.github.io/Languages/Programming/C++/Characteristics%20of%20OOPS/Polymorphism/Static_CompileTime/Templates/[Function Templates]
+* How function templates work internally? Assembly (Function Templates)
 
-== link:https://code-with-amitk.github.io//Languages/Programming/C++/Characteristics%20of%20OOPS/Polymorphism/Static_CompileTime/Templates/[class templates]
+=== link:https://code-with-amitk.github.io/Languages/Programming/C++/Characteristics%20of%20OOPS/Polymorphism/Static_CompileTime/Templates/[class templates]
 * Double, class object are not allowed template parameters
+
+=== link:https://code-with-amitk.github.io/Languages/Programming/C++/Characteristics%20of%20OOPS/Polymorphism/Static_CompileTime/Templates/Template%20Parameter%20Pack.html[Parameter Pack]
