--- a/Languages/Programming_Languages/c++/C++11_14_17_20/c++11/README.adoc
+++ b/Languages/Programming_Languages/c++/C++11_14_17_20/c++11/README.adoc
@@ -11,4 +11,6 @@
 == link:http://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/C++11/lvalue_rvalue_reference.html[Reference, r value, l value]
 * Reference variable, r value, l value, pr value, x value
 
+== link:http://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/C++11/remove_pointer_t.html[remove_pointer_t]
+
 
