--- a/DS_Questions/Questions/Strings/Convert/ToInt/Sum of Digits of String After Convert.adoc
+++ b/DS_Questions/Questions/Strings/Convert/ToInt/Sum of Digits of String After Convert.adoc
@@ -90,3 +90,37 @@ public:
     }
 };
 ```
+==== Rust
+```rs
+struct Solution;
+
+impl Solution {
+    pub fn get_lucky(s: String, k: i32) -> i32 {
+        // 1st step: transform all characters to their corresponding numbers
+        let mut temp = String::new();
+        for ch in s.chars() {
+            temp.push_str(&(ch as u8 - b'a' + 1).to_string());
+        }
+
+        // Sum all digits of the transformed string
+        let mut out = temp.chars().map(|ch| ch.to_digit(10).unwrap()).sum::<u32>() as i32;
+        
+        // Repeat the sum process k-1 times
+        for _ in 1..k {
+            out = Self::sum_all_digits(out);
+        }
+
+        out
+    }
+
+    fn sum_all_digits(num: i32) -> i32 {
+        let mut sum = 0;
+        let mut num = num;
+        while num > 0 {
+            sum += num % 10;  // Add remainder
+            num /= 10;        // Get quotient
+        }
+        sum
+    }
+}
+```
