--- a/DS_Questions/Data_Structures/Linked_Lists/insert/Insert Greatest Common Divisors in Linked List.adoc
+++ b/DS_Questions/Data_Structures/Linked_Lists/insert/Insert Greatest Common Divisors in Linked List.adoc
@@ -14,7 +14,8 @@ image::https://assets.leetcode.com/uploads/2023/07/18/ex1_copy.png?raw=true[ex 1
 ```c
 Input: head = [18,6,10,3]
 Output: [18,6,6,2,10,1,3]
-Explanation: The 1st diagram denotes the initial linked list and the 2nd diagram denotes the linked list after inserting the new nodes (nodes in blue are the inserted nodes).
+Explanation: The 1st diagram denotes the initial linked list and the 2nd diagram denotes the linked list after 
+inserting the new nodes (nodes in blue are the inserted nodes).
 - We insert the greatest common divisor of 18 and 6 = 6 between the 1st and the 2nd nodes.
 - We insert the greatest common divisor of 6 and 10 = 2 between the 2nd and the 3rd nodes.
 - We insert the greatest common divisor of 10 and 3 = 1 between the 3rd and the 4th nodes.
@@ -28,7 +29,8 @@ image::https://assets.leetcode.com/uploads/2023/07/18/ex2_copy1.png?raw=true[ex 
 ```
 Input: head = [7]
 Output: [7]
-Explanation: The 1st diagram denotes the initial linked list and the 2nd diagram denotes the linked list after inserting the new nodes.
+Explanation: The 1st diagram denotes the initial linked list and the 2nd diagram denotes the linked list 
+after inserting the new nodes.
 There are no pairs of adjacent nodes, so we return the initial linked list.
 ```
 
