--- a/DS_Questions/Questions/Strings/Count/Count the Number of Consistent Strings.adoc
+++ b/DS_Questions/Questions/Strings/Count/Count the Number of Consistent Strings.adoc
@@ -42,9 +42,7 @@ public:
     int countConsistentStrings(string allowed, vector<string>& words) {
         unordered_set<char> usAllowed, usWords;
         for (auto&i:allowed) {
-            auto it = usAllowed.find(i);
-            if (it == usAllowed.end())
-                usAllowed.insert(i);
+            usAllowed.insert(i);
         }
         int count = 0;
         for_each (words.begin(), words.end(), [usAllowed, &count](string& word){
@@ -62,4 +60,75 @@ public:
         return count;
     }
 };
+```
+==== Rust
+```rs
+use std::collections::HashSet;
+impl Solution {
+    pub fn count_consistent_strings(allowed: String, words: Vec<String>) -> i32 {
+        // Fill hashset from string
+        let mut hs:HashSet<char> = allowed.chars().collect();
+        let mut count = 0;
+        for i in words {
+            let mut consistent = true;
+            for j in i.chars() {
+                if let Some(val) = hs.get(&j) {
+                } else {
+                    consistent = false;
+                    break;
+                }
+            }
+            if consistent == true {
+                count += 1;
+            }
+        }
+        count
+    }
+}
+```
+==== Python
+```py
+class Solution:
+    def countConsistentStrings(self, allowed: str, words: List[str]) -> int:
+        # Take a hashset to store chars of allowed
+        hs = set(allowed)
+
+        count = 0
+        # Traverse every word from words
+        for i in words:
+            consistent = True
+            for j in i:
+                if j not in hs:
+                    consistent = False
+                    break
+            if consistent == True:
+                count += 1
+        return count
+```
+==== Java
+```java
+class Solution {
+    public int countConsistentStrings(String allowed, String[] words) {
+        // Character in place of char
+        HashSet<Character> hs = new HashSet<>();
+        // Store characters of allowed in Hashset
+        for (int i=0;i<allowed.length();i++) {
+            // charAt in place of []
+            hs.add(allowed.charAt(i));
+        }
+        int count = 0;
+        // Search characters of words inside allowed
+        for (int i=0;i<words.length;i++) {
+            boolean consistent = true;
+            for (int j=0;j<words[i].length();j++) {
+                if (!hs.contains(words[i].charAt(j)))
+                    consistent = false;
+            }
+            if (consistent) {
+                count += 1;
+            }
+        }
+        return count;
+    }
+}
 ```
