--- a/Languages/Programming_Languages/c++/C++11_14_17_20/c++17/README.adoc
+++ b/Languages/Programming_Languages/c++/C++11_14_17_20/c++17/README.adoc
@@ -2,9 +2,9 @@
 :toclevels: 6
 
 === Fold Expression
-* link:https://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/C++17/index.html[Unary left fold, Unary right fold, Binary left fold, binary right fold]
+* link:https://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/C++17/[Unary left fold, Unary right fold, Binary left fold, binary right fold]
 
-=== link:https://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/C++17/index.html[string_view]
+=== link:https://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/C++17/[string_view]
 
 == ABOUT ASSEMBLY
 ```c
