--- a/DS_Questions/Algorithms/Dynamic_Programming/README.adoc
+++ b/DS_Questions/Algorithms/Dynamic_Programming/README.adoc
@@ -98,3 +98,4 @@ start ___  ___
 ===== link:/DS_Questions/Questions/Random/Power/Power_x_to_n.md[Power (x,n)]
 ===== link:/DS_Questions/Questions/Strings/EncodeDecode_EncryptDec_CompDecompress/Encode_Decode/Total_Possible_ways_to_Decode.adoc[Decode Ways]
 ===== link:/DS_Questions/Questions/Permutation_Combination/Combinations/Number_of_Dice_Rolls_With_Target_Sum.adoc[Number of Dice Rolls With Target Sum]
+===== link:/DS_Questions/Questions/vectors_arrays/2d-grid/Min_Path_Sum_in_Triangle.adoc[Minimum Path Sum in Triangle]
