--- a/Projects/Rust/REST_API_HTTP_Server_ActixWeb/Code/http_server_storing_info.adoc
+++ b/Projects/Rust/REST_API_HTTP_Server_ActixWeb/Code/http_server_storing_info.adoc
@@ -22,6 +22,12 @@ use serde::Deserialize;
 use std::sync::{Arc, Mutex};
 
 #[derive(Deserialize)]
+struct UpdateBoard {
+    old_name: String,
+    new_name: String,
+}
+
+#[derive(Deserialize)]
 struct CreateBoard {
     name: String,
 }
@@ -63,6 +69,20 @@ async fn get_boards(data: web::Data<Arc<AppState>>) -> impl Responder {
     // Process translations here
     HttpResponse::Ok().body(format!("Boards: {:?}", boards))
 }
+
+#[put("/v1/board/update")]
+async fn update_board(board: web::Json<UpdateBoard>, data: web::Data<Arc<AppState>>) -> impl Responder {
+    let mut boards = data.boards.lock().unwrap();
+
+    // Find the position of the old board name
+    if let Some(pos) = boards.iter().position(|x| x == &board.old_name) {
+        // Update the old board name with the new one
+        boards[pos] = board.new_name.clone();
+        HttpResponse::Ok().body(format!("Board '{}' updated to '{}'\n", board.old_name, board.new_name))
+    } else {
+        HttpResponse::NotFound().body(format!("Board '{}' not found\n", board.old_name))
+    }
+}
 ```
 
 === POST Request
@@ -102,4 +122,24 @@ Note: Unnecessary use of -X or --request, GET is already inferred.
 < 
 * Connection #0 to host 127.0.0.1 left intact
 Boards: ["board1"]
+```
+
+=== PUT Request
+```c
+# curl -X PUT -H "Content-Type: application/json" -d '{"old_name": "NewBoard", "new_name": "NewBoard2"}' http://127.0.
+0.1:8080/v1/board/update -vvv
+*   Trying 127.0.0.1:8080...
+* Connected to 127.0.0.1 (127.0.0.1) port 8080
+> PUT /v1/board/update HTTP/1.1
+> Host: 127.0.0.1:8080
+> User-Agent: curl/8.5.0
+> Accept: */*
+> Content-Type: application/json
+> Content-Length: 49
+> 
+< HTTP/1.1 200 OK
+< content-length: 40
+< date: Sat, 09 Nov 2024 13:53:38 GMT
+< 
+Board 'NewBoard' updated to 'NewBoard2'
 ```
