--- a/Projects/Rust/REST_API_HTTP_Server_ActixWeb/Code/http_server_storing_info.adoc
+++ b/Projects/Rust/REST_API_HTTP_Server_ActixWeb/Code/http_server_storing_info.adoc
@@ -17,7 +17,7 @@ serde_json = "1.0"
 
 === main.rs
 ```rs
-use actix_web::{post, web, get, App, HttpResponse, HttpServer, Responder};
+use actix_web::{post, web, get, delete, App, HttpResponse, HttpServer, Responder};
 use serde::Deserialize;
 use std::sync::{Arc, Mutex};
 
@@ -49,6 +49,8 @@ async fn main() -> std::io::Result<()> {
             .app_data(web::Data::new(app_state))
             .service(create_board)
             .service(get_boards)
+            .service(update_board)
+            .service(delete_board)
     })
     .bind(("127.0.0.1", 8080))?
     .run()
@@ -79,6 +81,20 @@ async fn update_board(board: web::Json<UpdateBoard>, data: web::Data<Arc<AppStat
         // Update the old board name with the new one
         boards[pos] = board.new_name.clone();
         HttpResponse::Ok().body(format!("Board '{}' updated to '{}'\n", board.old_name, board.new_name))
+    } else {
+        HttpResponse::NotFound().body(format!("Board '{}' not found\n", board.old_name))
+    }
+}
+
+#[delete("/v1/board/delete")]
+async fn delete_board(board: web::Json<UpdateBoard>, data: web::Data<Arc<AppState>>) -> impl Responder {
+    let mut boards = data.boards.lock().unwrap();
+
+    // Find the position of the old board name
+    if let Some(pos) = boards.iter().position(|x| x == &board.old_name) {
+        // Delete the board name
+        boards.remove(pos);
+        HttpResponse::Ok().body(format!("Board '{}' deleted\n", board.old_name))
     } else {
         HttpResponse::NotFound().body(format!("Board '{}' not found\n", board.old_name))
     }
@@ -142,4 +158,24 @@ Boards: ["board1"]
 < date: Sat, 09 Nov 2024 13:53:38 GMT
 < 
 Board 'NewBoard' updated to 'NewBoard2'
+```
+
+=== DELETE Request
+```c
+# curl -X DELETE -H "Content-Type: application/json" -d '{"old_name": "board_us", "new_name": "test"}' http://127.0.0.1:8080/v1/board/delete -vvv
+*   Trying 127.0.0.1:8080...
+* Connected to 127.0.0.1 (127.0.0.1) port 8080
+> DELETE /v1/board/delete HTTP/1.1
+> Host: 127.0.0.1:8080
+> User-Agent: curl/8.5.0
+> Accept: */*
+> Content-Type: application/json
+> Content-Length: 44
+> 
+< HTTP/1.1 200 OK
+< content-length: 25
+< date: Sat, 09 Nov 2024 14:33:11 GMT
+< 
+Board 'board_us' deleted
+* Connection #0 to host 127.0.0.1 left intact
 ```
