Update and rename README.md to README.adoc

--- a/System-Design/Concepts/MicroServices/README.adoc
+++ b/System-Design/Concepts/MicroServices/README.adoc
@@ -1,59 +1,16 @@
-**Microservices**
-- [What](#what)
-- [Advantages/Disadvantages](#adv)
-- [Microservices vs Deployment Monolith](#vs)
-- [Migrating from Depolyment Monolith to microserves](#mig)
-  - [Migration Patterns](#pat)
-- [Architecture](#ar)
-- **Design Types**
-  - Domain Driven Design(DDD)
-    - [1. CUSTOMER/SUPPLIER PATTERN](#cust)
-    - [2. CONFORMIST PATTERN](#con)
-    - [3. ANTI-CORRUPTION LAYER/ACL PATTERN](#an)
-    - [4. SEPERATE WAYS PATTERN](#sep)
-    - [5. SHARED KERNEL PATTERN](#sh)
-    - [6. OPEN HOST SERVICE PATTERN](#open)
+:toc:
+:toclevels: 5
 
 
-### What?
-- Bigger project is broken into independent modules/processes(called microservice) running on independent VM or Docker container. Size of microservices can vary from 100 LOC to 10k.
-- Microservices are stateless because new MS boots in to serve existing request, it should not care about states.
+== link:https://code-with-amitk.github.io/System_Design/Concepts/Microservices/[Microservice?]
+* Advantages, Disadvantages
+* Microservice Deign patters (CQRS, Saga, API Gateway, Service Discovery Pattern, Circuit Breaker Pattern, Externalized Configuration, Event-Driven Architecture)
 
-<a name=adv></a>
-### Advantages/Disadvantages
-#### Advantages
-  - *1. Independent deployble modules:* All teams can work independently of each other. Teams can make their own technology decisions.
-  - *2.* Microservice can be brought into production at its own.
-  - *3. Adopting New Technology:* Developers can employ a completely new technology stack (without affecting the others).
-  - *4. Easy replacement:* Complete microservice can be re-engineered or replaced easily, without affecting other microservices.
-  - *5. Resilience:*  If 1 microservice of a system fails, failure will not cascade to rest of the system. Rest of system can carry on working.
-  - *6. Scaling:* In monolithic system we have to scale everything together not with microservices.
+== link:https://code-with-amitk.github.io/System_Design/Concepts/Microservices/[Monolith?]
+* Advantages, Disadvantages
+* Situations where monolithic is suitable
 
-#### Disadvantages
-  - *1.* Increased Operation effort: MS system have many more units wrt deployment monolith hence requires larger operations efforts
-  - *2.* High communication time: MS communicate over network, hence will take more time wrt file based communication.
-  - *3.* Testing all microservices together is not good idea: If 1 MS fails, it blocks tests of all other microservices.
-
-<a name=vs></a>
-### Microservices vs Deployment Monolith
-  
-  | | Microservices | Deployment Monolith |
-  | --- | --- | --- |
-  | What | definition above | Opposite to microservices, in DM all modules are tightly coupled. |
-  | CI/CD pipeline | Small(as smaller code to be tested) | Huge |
-  | time taken by CI/CD | small | Huge |
-  | Machine required to build CI/CD | small | high end machine |
-  | Deployment | poses a smaller risk(since less functionality is changed) | Complete system is deployed as new |
-  | Automate deployment | MS can only function if deployment is automated(since deployments are large) | |
-  | Robust | More than DM. Memory leak in MS will crash MS only | Crash whole system & hard to debug |
-  | Communication medium | network/async | sync/files(sync communication leads issues when hosts are unavailable) |
-  | Scaling | Particular MS might be scaled. All times Whole system scaling is not required | whole system is scaled |
-  | Stateless | yes | no |
-  | Security | More, since all MS are isolated from each other | |
-  | Performance | Accurate & Easy to measure | |
-  | Fast delivery to market | Yes | no |
-  | Database | Each should have its own DB or atleast its own DB schema. CI/CD is not possible in common DB| |
-  | Complexity | Small code, easy to understand | Huge code, tough to correlate |
+== link:https://code-with-amitk.github.io/System_Design/Concepts/Microservices/[Microservices vs Deployment Monolith]
   
 <a name=mig></a>  
 ### Migrating from Depolyment Monolith to microserves
