--- a/Languages/Programming_Languages/c++/OOPS_Principles/README.adoc
+++ b/Languages/Programming_Languages/c++/OOPS_Principles/README.adoc
@@ -87,8 +87,10 @@ class derv: public IBase1, public IBase2 .. {
 === e. Dependency Inversion Principle (DIP)
 * High-level modules should not depend on low-level modules. Both should depend on abstractions(means Interface(class having PVF).
 * Abstractions should not depend on details. Details should depend on abstractions.
+
 ==== Example (Notification Service)
 Let's suppose there is a notification service which sends (Email)
+
 ===== Voilation of DIP
 * Problems with approach:
 ** NotificationSender class is tightly coupled to the Email class. if we want to send SMS, we need to modify NotificationService class.
@@ -111,7 +113,7 @@ int main() {
     return 0;
 }
 ```
-==== Solution to above problem using DIP
+===== Solution to above problem using DIP
 * Decoupling: The NotificationSender class now depends only on the INotification interface, not on concrete implementations like Email 
 * Flexible: We can easily add new notification types (e.g. SMS) without modifying NotificationService class
 ```cpp
